--- a/ex9/index.html
+++ b/ex9/index.html
@@ -10,5 +10,16 @@
    <h1>Usando links externos</h1>
    <p>Você pode acessar meu <a href="https://gustavoguanabara.github.io" target="_blank" rel="external">repositorio publico no Github</a></p>
    <p>Você pode acessar o meu <a href="https://youtu.be/401hZy6Hipw" target="_blank" rel="external">canal no YouTube</a></p>
+
+   <h1>Usando links internos</h1>
+   <p>Esta é a primeira página do site se você quiser, pode acessar também a <a href="page002.html" rel="next" target="_self">segunda página</a></p>
+   <p>Você também pode acessar a nossa página de <a href="noticias/page003.html" rel="next" target="_self">notícias</a></p>
+
+   <h1>Links para download</h1>
+   <ul>
+       <li><a href="livro/Napoleão Bonaparte.docx" download="word-napoleao.word" type="application/msword">baixar word</a></li>
+       <!-- <li><a href="#">word em zip</a></li> -->
+   </ul>
+
 </body>
 </html>
